# hotep

./: .travis.yml  README.md  hotep.cabal  stack.yaml
app/: Main.hs
docs/: Intro.md
src/: Hotep.hs
src/Hotep/Internal/: Config.hs  Types.hs
test/: Spec.hs
