name:                hotep
version:             0.1.0.0
synopsis:            "Fail Fast" process management for Haskell; inspired by Erlang
description:         Please see README.md
homepage:            https://github.com/tel/hotep#readme
license:             MPL2
license-file:        LICENSE
author:              Joseph Abrahamson
maintainer:          me@jspha.com
copyright:           2017 Joseph Abrahamson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                  Hotep
                  Hotep.Internal.Types
                  Hotep.Internal.Config
  build-depends:       base >= 4.7 && < 5,
                       time >= 1.6 && < 1.8
  default-language:    Haskell2010

test-suite hotep-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hotep
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tel/hotep
